trying to get git language statistics working

--- a/documentation.yml
+++ b/documentation.yml
@@ -1,2 +1,2 @@
 # Ignore these files for calculating github language statistics.
-- ^sports_scraper/Other/
+sports_scraper/Other/* linguist-documentation
